--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
               <a class="navbar-brand" href="/"
                 ><span class="India Certify"></span>
                 <img
-                  src="images/logo.svg"
+                  src="./images/logo.svg"
                   height="40"
                   alt="India Certify logo"
                 />
